--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clean": "lerna clean --yes && yarn build:clean && rimraf node_modules",
     "clean:force": "rimraf package-lock.json yarn.lock && yarn clean",
     "cli": "node tools/cli",
+    "commit": "git cz",
     "compile": "lerna exec -- yarn compile",
     "coverage": "jest --coverage",
     "postcoverage": "remap-istanbul --input coverage/coverage.raw.json --type lcovonly --output coverage/lcov.info",
@@ -192,6 +193,7 @@
     "caporal": "^1.3.0",
     "chokidar": "^3.4.0",
     "clean-webpack-plugin": "^2.0.0",
+    "commitizen": "^4.2.3",
     "concurrently": "^5.0.2",
     "connect": "^3.7.0",
     "copy-webpack-plugin": "^6.4.0",
