--- a/servers/moleculer-server/Dockerfile
+++ b/servers/moleculer-server/Dockerfile
@@ -4,10 +4,12 @@ FROM node:12.18.4-alpine
 # set workdir and copy the dependnecies there
 # This way, dependnecies are cached without the need of cacheing all files.
 
+COPY .npmrc /tmp/.npmrc 
 ADD package.json /tmp/package.json
 RUN set -ex \
 	&& cd /tmp \
 	&& yarn install \
+	&& rm -f /tmp/.npmrc \
 	&& mkdir -p /home/app \
 	&& cp -a /tmp/node_modules /home/app/ \
 	&& rm -Rf /tmp/*
