--- a/servers/backend-server/Dockerfile
+++ b/servers/backend-server/Dockerfile
@@ -6,10 +6,13 @@ ENV PYTHON /usr/bin/python
 # Copy package.json only to temp folder, install its dependencies,
 # set workdir and copy the dependnecies there
 # This way, dependnecies are cached without the need of cacheing all files.
+
+COPY .npmrc /tmp/.npmrc  
 ADD package.json /tmp/package.json
 RUN set -ex \
 	&& cd /tmp \
 	&& yarn install \
+	&& rm -f /tmp/.npmrc \
 	&& mkdir -p /home/app \
 	&& cp -a /tmp/node_modules /home/app/ \
 	&& rm -Rf /tmp/*
