--- a/packages-modules/counter/server/package.json
+++ b/packages-modules/counter/server/package.json
@@ -40,7 +40,7 @@
     }
   },
   "devDependencies": {
-    "webpack": "4.43.0"
+    "webpack": "*"
   },
   "peerDependencies": {
     "@cdm-logger/server": "*",
