--- a/packages/sample-core/package.json
+++ b/packages/sample-core/package.json
@@ -19,7 +19,7 @@
     "watch": "yarn build:lib:watch"
   },
   "devDependencies": {
-    "webpack": "4.43.0"
+    "webpack": "*"
   },
   "publishConfig": {
     "access": "public"
