--- a/packages-modules/counter/browser/package.json
+++ b/packages-modules/counter/browser/package.json
@@ -44,8 +44,8 @@
     "antd": "^4.5.2"
   },
   "devDependencies": {
-    "rimraf": "^3.0.0",
-    "webpack": "4.43.0"
+    "rimraf": "*",
+    "webpack": "*"
   },
   "peerDependencies": {
     "@common-stack/client-react": "*",
