--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "db:migrate:rollback": "knex migrate:rollback  --cwd . --knexfile ./servers/backend-server/knexfile.js",
     "db:seed": "yarn db:migrate && knex seed:run  --cwd . --knexfile ./servers/backend-server/knexfile.js",
     "predevpublish": "git checkout devpublish && git pull origin devpublish && git merge -s recursive -X theirs develop -m 'merge from develop' && node tools/update-dependency-version.js",
-    "devpublish": "lerna publish prerelease --ignore-scripts",
+    "devpublish": "lerna publish prerelease --ignore-scripts --exact",
     "postdevpublish": "git checkout develop",
     "devpublish:auto": "yarn devpublish -- --yes",
     "devpublish:force": "yarn devpublish:forceManual -- --yes",
