--- a/portable-devices/desktop/package.json
+++ b/portable-devices/desktop/package.json
@@ -24,7 +24,8 @@
     "start:staging": "cross-env NODE_ENV=staging ENV_FILE=../../config/staging/staging.env electron dist/main/main.js",
     "test": "echo Skipped.",
     "watch": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env electron-webpack dev",
-    "watch:staging": "cross-env ENV_FILE=../../config/staging/staging.env electron-webpack dev"
+    "watch:staging": "cross-env ENV_FILE=../../config/staging/staging.env electron-webpack dev",
+    "release": "electron-builder build --mac"
   },
   "resolutions": {
     "webpack-sources": "^1.1.0"
@@ -64,7 +65,6 @@
     "cors": "^2.8.5",
     "cross-env": "^6.0.3",
     "dotenv": "^8.2.0",
-    "electron": "^11.2.0",
     "electron-debug": "^3.1.0",
     "electron-json-storage": "^2.0.0",
     "electron-log": "^4.2.4",
@@ -121,7 +121,7 @@
   },
   "devDependencies": {
     "cross-env": "^6.0.3",
-    "electron": "^11.2.0",
+    "electron": "11.4.3",
     "electron-builder": "^22.9.1",
     "electron-devtools-installer": "^3.1.1",
     "electron-webpack": "^2.8.2",
