--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -17,10 +17,10 @@
   "scripts": {
     "prebuild": "yarn build:clean",
     "build": "cross-env NODE_ENV=production zen build",
-    "build:dev": "cross-env NODE_ENV=development zen build",
     "build:clean": "rimraf dist .awcache",
     "build:debug": "cross-env DEBUGGING=true NODE_ENV=production zen build",
     "build:debug:verbose": "yarn build:debug -- -v",
+    "build:dev": "cross-env NODE_ENV=development zen build",
     "docker:build": "cross-env NODE_OPTIONS='--max_old_space_size=4096' yarn build && docker build . -t $npm_package_name:$npm_package_version",
     "docker:build:debug": "yarn build:debug && docker build . -t $npm_package_name:$npm_package_version",
     "docker:run": "docker run  --env-file ../../config/staging/docker-staging.env  -p 3010:3010  -it $npm_package_name:$npm_package_version",
@@ -123,6 +123,7 @@
     "redux-observable": "^1.2.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "reflect-metadata": "^0.1.13",
     "reselect": "^4.0.0",
     "rxjs": "^6.5.3",
     "rxjs-compat": "^6.5.3",
