--- a/portable-devices/desktop/package.json
+++ b/portable-devices/desktop/package.json
@@ -19,13 +19,13 @@
     "build:clean": "rimraf dist",
     "electron": "electron dist/main/main.js",
     "package": "electron-builder",
+    "release": "electron-builder build --mac",
     "start": "cross-env NODE_ENV=production electron dist/main/main.js",
     "start:dev": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env electron dist/main/main.js",
     "start:staging": "cross-env NODE_ENV=staging ENV_FILE=../../config/staging/staging.env electron dist/main/main.js",
     "test": "echo Skipped.",
     "watch": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env electron-webpack dev",
-    "watch:staging": "cross-env ENV_FILE=../../config/staging/staging.env electron-webpack dev",
-    "release": "electron-builder build --mac"
+    "watch:staging": "cross-env ENV_FILE=../../config/staging/staging.env electron-webpack dev"
   },
   "resolutions": {
     "webpack-sources": "^1.1.0"
@@ -65,6 +65,7 @@
     "cors": "^2.8.5",
     "cross-env": "^6.0.3",
     "dotenv": "^8.2.0",
+    "electron": "11.4.3",
     "electron-debug": "^3.1.0",
     "electron-json-storage": "^2.0.0",
     "electron-log": "^4.2.4",
@@ -112,6 +113,7 @@
     "redux-observable": "^1.2.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "reflect-metadata": "^0.1.13",
     "reselect": "^4.0.0",
     "rxjs": "^6.5.3",
     "rxjs-compat": "^6.5.3",
@@ -121,7 +123,6 @@
   },
   "devDependencies": {
     "cross-env": "^6.0.3",
-    "electron": "11.4.3",
     "electron-builder": "^22.9.1",
     "electron-devtools-installer": "^3.1.1",
     "electron-webpack": "^2.8.2",
