--- a/portable-devices/desktop/package.json
+++ b/portable-devices/desktop/package.json
@@ -19,13 +19,13 @@
     "build:clean": "rimraf dist",
     "electron": "electron dist/main/main.js",
     "package": "electron-builder",
+    "release": "electron-builder build --mac",
     "start": "cross-env NODE_ENV=production electron dist/main/main.js",
     "start:dev": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env electron dist/main/main.js",
     "start:staging": "cross-env NODE_ENV=staging ENV_FILE=../../config/staging/staging.env electron dist/main/main.js",
     "test": "echo Skipped.",
     "watch": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env electron-webpack dev",
-    "watch:staging": "cross-env ENV_FILE=../../config/staging/staging.env electron-webpack dev",
-    "release": "electron-builder build --mac"
+    "watch:staging": "cross-env ENV_FILE=../../config/staging/staging.env electron-webpack dev"
   },
   "resolutions": {
     "webpack-sources": "^1.1.0"
@@ -120,6 +120,7 @@
     "subscriptions-transport-ws": "0.9.18"
   },
   "devDependencies": {
+    "@loopmode/electron-webpack-config-yarn-workspaces": "^0.2.0",
     "cross-env": "^6.0.3",
     "electron": "11.4.3",
     "electron-builder": "^22.9.1",
@@ -127,6 +128,7 @@
     "electron-webpack": "^2.8.2",
     "electron-webpack-ts": "^4.0.1",
     "pm2": "^4.2.1",
-    "rimraf": "^3.0.0"
+    "rimraf": "^3.0.0",
+    "workspaces-utils": "^1.2.1"
   }
 }
