--- a/portable-devices/desktop/package.json
+++ b/portable-devices/desktop/package.json
@@ -65,7 +65,6 @@
     "cors": "^2.8.5",
     "cross-env": "^6.0.3",
     "dotenv": "^8.2.0",
-    "electron-debug": "^3.1.0",
     "electron-json-storage": "^2.0.0",
     "electron-log": "^4.2.4",
     "electron-positioner": "^4.1.0",
@@ -89,9 +88,11 @@
     "history": "^4.10.1",
     "immutability-helper": "^3.0.1",
     "inversify": "^5.0.1",
+    "inversify-binding-decorators": "^4.0.0",
     "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.15",
+    "os-name": "^4.0.0",
     "pify": "^2.3.0",
     "ramda": "^0.26.1",
     "react": "^16.14.0",
@@ -112,23 +113,34 @@
     "redux-observable": "^1.2.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "reflect-metadata": "^0.1.13",
     "reselect": "^4.0.0",
     "rxjs": "^6.5.3",
     "rxjs-compat": "^6.5.3",
     "rxjs-hooks": "^0.5.2",
     "source-map-support": "^0.5.19",
-    "subscriptions-transport-ws": "0.9.18"
+    "sqlite3": "^5.0.2",
+    "subscriptions-transport-ws": "0.9.18",
+    "typeorm": "^0.2.32"
   },
   "devDependencies": {
+    "@jest-runner/electron": "^3.0.1",
     "@loopmode/electron-webpack-config-yarn-workspaces": "^0.2.0",
     "cross-env": "^6.0.3",
     "electron": "11.4.3",
     "electron-builder": "^22.9.1",
-    "electron-devtools-installer": "^3.1.1",
+    "electron-debug": "^3.1.0",
+    "electron-devtools-installer": "^3.2.0",
+    "electron-is": "^3.0.0",
+    "electron-log": "^4.3.5",
     "electron-webpack": "^2.8.2",
     "electron-webpack-ts": "^4.0.1",
     "pm2": "^4.2.1",
     "rimraf": "^3.0.0",
     "workspaces-utils": "^1.2.1"
+  },
+  "buildAbout": {
+    "appName": "Fullstack-Pro",
+    "apiApp": "https://time-tracker-api.herokuapp.com/"
   }
 }
