update electron  module

--- a/portable-devices/desktop/package.json
+++ b/portable-devices/desktop/package.json
@@ -48,6 +48,7 @@
     "@sample-stack/core": "link:../../packages/sample-core",
     "@sample-stack/counter-module-browser": "link:../../packages-modules/counter/browser",
     "@sample-stack/platform-browser": "link:../../packages/sample-platform/browser",
+    "@sample-stack/counter-module-electron": "link:../../packages-modules/counter/electron",
     "antd": "^4.5.2",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.10",
