--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "postbootstrap": "yarn build",
     "build": "yarn build:packages",
     "build:clean": "lerna exec yarn build:clean",
-    "build:packages": "lerna run build --ignore *server --ignore *desktop",
-    "build:packages:watch": "lerna run build:lib:watch --ignore *server --ignore *desktop --stream",
+    "build:packages": "lerna run build --ignore *server --ignore *desktop --ignore *browser-extension",
+    "build:packages:watch": "lerna run build:lib:watch --ignore *server --ignore *desktop --ignore *browser-extension --stream",
     "check-updates": "lerna exec ./node_modules/.bin/npm-check-updates -- -u",
     "clean": "lerna clean --yes && yarn build:clean && rimraf node_modules",
     "clean:force": "rimraf package-lock.json yarn.lock && yarn clean",
@@ -81,7 +81,7 @@
     "pretravis": "yarn compile",
     "travis": "istanbul cover -x \"*.test.js\" _mocha -- --timeout 5000 --full-trace ./test/tests.js",
     "posttravis": "yarn lint",
-    "watch": "lerna exec --no-sort --ignore *server --ignore *desktop --ignore *mobile --stream --parallel -- webpack --watch",
+    "watch": "lerna exec --no-sort --ignore *server --ignore *desktop --ignore *browser-extension --ignore *mobile --stream --parallel -- webpack --watch",
     "watch-packages": "lerna exec --no-sort  --scope @sample-stack/platform* --scope @sample-stack/react-shared-components --scope @sample-stack/core --stream --parallel 'webpack --watch'",
     "zen:build": "cross-env NODE_ENV=production zen build",
     "zen:exp": "zen exp",
