--- a/portable-devices/desktop/package.json
+++ b/portable-devices/desktop/package.json
@@ -77,7 +77,7 @@
     "electron-log": "^4.2.4",
     "electron-positioner": "^4.1.0",
     "electron-redux": "^1.5.4",
-    "electron-updater": "^4.3.4",
+    "electron-updater": "^4.3.9",
     "envalid": "^7.0.0",
     "fela": "11.6.0",
     "fela-beautifier": "^11.6.0",
@@ -134,7 +134,7 @@
   "devDependencies": {
     "@jest-runner/electron": "^3.0.1",
     "cross-env": "^6.0.3",
-    "electron-builder": "^22.9.1",
+    "electron-builder": "~22.9.1",
     "electron-debug": "^3.1.0",
     "electron-devtools-installer": "^3.2.0",
     "electron-is": "^3.0.0",
