--- a/portable-devices/desktop/package.json
+++ b/portable-devices/desktop/package.json
@@ -20,12 +20,12 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production electron-webpack",
     "build:clean": "rimraf dist",
-    "electron": "electron dist/main/main.js",
+    "electron": "electron dist/main/index.js",
     "package": "electron-builder",
     "release": "electron-builder build --mac",
-    "start": "cross-env NODE_ENV=production electron dist/main/main.js",
-    "start:dev": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env electron dist/main/main.js",
-    "start:staging": "cross-env NODE_ENV=staging ENV_FILE=../../config/staging/staging.env electron dist/main/main.js",
+    "start": "cross-env NODE_ENV=production electron dist/main/index.js",
+    "start:dev": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env electron dist/main/index.js",
+    "start:staging": "cross-env NODE_ENV=staging ENV_FILE=../../config/staging/staging.env electron dist/main/index.js",
     "test": "echo Skipped.",
     "watch": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env electron-webpack dev",
     "watch:staging": "cross-env ENV_FILE=../../config/staging/staging.env electron-webpack dev",
