--- a/portable-devices/desktop/package.json
+++ b/portable-devices/desktop/package.json
@@ -18,20 +18,21 @@
   },
   "main": "index.js",
   "scripts": {
-    "build": "cross-env NODE_ENV=production electron-webpack",
+    "build": "cross-env NODE_OPTIONS='--max_old_space_size=4096' NODE_ENV=production electron-webpack",
     "build:clean": "rimraf dist",
-    "electron": "electron dist/main/index.js",
+    "electron": "electron dist/main/main.js",
     "package": "electron-builder",
     "release": "electron-builder build --mac",
-    "start": "cross-env NODE_ENV=production electron dist/main/index.js",
-    "start:dev": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env electron dist/main/index.js",
-    "start:staging": "cross-env NODE_ENV=staging ENV_FILE=../../config/staging/staging.env electron dist/main/index.js",
+    "release:linux": "electron-builder build --linux",
+    "release:mac": "electron-builder build --mac",
+    "release:win": "electron-builder build --win",
+    "start": "cross-env NODE_ENV=production electron dist/main/main.js",
+    "start:dev": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env electron dist/main/main.js",
+    "start:staging": "cross-env NODE_ENV=staging ENV_FILE=../../config/staging/staging.env electron dist/main/main.js",
+    "start:prod": "cross-env NODE_ENV=production ENV_FILE=../../config/development/dev.env electron dist/main/main.js",
     "test": "echo Skipped.",
     "watch": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env electron-webpack dev",
-    "watch:staging": "cross-env ENV_FILE=../../config/staging/staging.env electron-webpack dev",
-    "release:mac": "electron-builder build --mac",
-    "release:linux": "electron-builder build --linux",
-    "release:win": "electron-builder build --win"
+    "watch:staging": "cross-env ENV_FILE=../../config/staging/staging.env electron-webpack dev"
   },
   "resolutions": {
     "webpack-sources": "^1.1.0"
@@ -47,8 +48,8 @@
     "@common-stack/server-core": "0.0.262",
     "@sample-stack/core": "link:../../packages/sample-core",
     "@sample-stack/counter-module-browser": "link:../../packages-modules/counter/browser",
-    "@sample-stack/platform-browser": "link:../../packages/sample-platform/browser",
     "@sample-stack/counter-module-electron": "link:../../packages-modules/counter/electron",
+    "@sample-stack/platform-browser": "link:../../packages/sample-platform/browser",
     "antd": "^4.5.2",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.10",
@@ -72,13 +73,12 @@
     "cors": "^2.8.5",
     "cross-env": "^6.0.3",
     "dotenv": "^8.2.0",
-    "electron": "11.4.3",
     "electron-json-storage": "^2.0.0",
-    "electron-log": "^4.2.4",
     "electron-positioner": "^4.1.0",
     "electron-redux": "^1.5.4",
     "electron-updater": "^4.3.9",
     "envalid": "^7.0.0",
+    "esm": "^3.2.25",
     "fela": "11.6.0",
     "fela-beautifier": "^11.6.0",
     "fela-dom": "11.6.0",
@@ -134,7 +134,8 @@
   "devDependencies": {
     "@jest-runner/electron": "^3.0.1",
     "cross-env": "^6.0.3",
-    "electron-builder": "~22.9.1",
+    "electron": "11.4.10",
+    "electron-builder": "^22.11.7",
     "electron-debug": "^3.1.0",
     "electron-devtools-installer": "^3.2.0",
     "electron-is": "^3.0.0",
