--- a/portable-devices/desktop/package.json
+++ b/portable-devices/desktop/package.json
@@ -22,9 +22,9 @@
     "build:clean": "rimraf dist",
     "electron": "electron dist/main/main.js",
     "package": "electron-builder",
-    "release": "electron-builder build --mac",
-    "release:linux": "electron-builder build --linux",
-    "release:mac": "electron-builder build --mac",
+    "release": "yarn build && electron-builder build --mac",
+    "release:linux": "yarn build && electron-builder build --linux",
+    "release:mac": "yarn build && electron-builder build --mac",
     "release:win": "electron-builder build --win",
     "start": "cross-env NODE_ENV=production electron dist/main/main.js",
     "start:dev": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env electron dist/main/main.js",
@@ -40,8 +40,9 @@
   "dependencies": {
     "@ant-design/compatible": "^1.0.5",
     "@ant-design/icons": "^4.2.2",
-    "@cdm-logger/client": "^5.0.7",
-    "@cdm-logger/server": "^6.0.0",
+    "@cdm-logger/client": "^7.0.4",
+    "@cdm-logger/server": "^7.0.4",
+    "@cdm-logger/electron": "^7.0.4",
     "@common-stack/client-core": "0.0.262",
     "@common-stack/client-react": "0.0.262",
     "@common-stack/core": "0.0.262",
