--- a/package.json
+++ b/package.json
@@ -155,9 +155,13 @@
     "@graphql-codegen/typescript-resolvers": "1.13.5",
     "@hot-loader/react-dom": "^16.14.0",
     "@larix/zen": "0.1.37",
+    "@open-wc/building-rollup": "^1.10.0",
     "@redux-devtools/core": "^3.9.0",
     "@redux-devtools/dock-monitor": "^1.4.0",
     "@redux-devtools/log-monitor": "^2.3.0",
+    "@rollup/plugin-graphql": "1.0.0",
+    "@rollup/plugin-image": "^2.0.6",
+    "@rollup/plugin-typescript": "^6.1.0",
     "@shelf/jest-mongodb": "^1.1.5",
     "@types/async": "^3.0.3",
     "@types/body-parser": "1.17.1",
@@ -285,6 +289,7 @@
     "remap-istanbul": "^0.13.0",
     "resolve-url-loader": "^3.1.1",
     "rimraf": "^3.0.0",
+    "rollup": "^2.53.2",
     "sass-loader": "^8.0.0",
     "shelljs": "^0.8.3",
     "sinon": "^8.0.1",
