--- a/portable-devices/mobile/package.json
+++ b/portable-devices/mobile/package.json
@@ -25,11 +25,11 @@
   "dependencies": {
     "@cdm-logger/client": "^7.0.7",
     "@codler/react-native-keyboard-aware-scroll-view": "1.0.0",
-    "@common-stack/client-core": "^0.0.262",
-    "@common-stack/client-react": "^0.0.262",
-    "@common-stack/client-react-native": "^0.0.262",
-    "@common-stack/core": "^0.0.262",
-    "@common-stack/server-core": "^0.0.262",
+    "@common-stack/client-core": "^0.1.1",
+    "@common-stack/client-react": "^0.1.1",
+    "@common-stack/client-react-native": "^0.1.1",
+    "@common-stack/core": "^0.1.1",
+    "@common-stack/server-core": "^0.1.1",
     "@expo/samples": "^3.0.3",
     "@expo/vector-icons": "^12.0.0",
     "@react-native-community/async-storage": "^1.12.1",
@@ -46,20 +46,9 @@
     "@react-navigation/stack": "^5.12.8",
     "@sample-stack/counter-module-mobile": "link:../../packages-modules/counter/mobile",
     "antd": "^4.5.2",
-    "apollo-cache-inmemory": "^1.6.5",
-    "apollo-cache-router": "^1.1.6",
-    "apollo-client": "^2.6.10",
-    "apollo-fetch": "^0.7.0",
-    "apollo-link": "^1.2.13",
-    "apollo-link-batch-http": "^1.2.13",
-    "apollo-link-context": "^1.0.19",
+    "@apollo/client": "^3.4.5",
     "apollo-link-debounce": "^2.1.0",
-    "apollo-link-error": "^1.1.12",
-    "apollo-link-http": "^1.5.16",
     "apollo-link-logger": "^1.2.3",
-    "apollo-link-retry": "^2.2.15",
-    "apollo-link-schema": "^1.2.4",
-    "apollo-link-ws": "^1.0.19",
     "apollo-logger": "^0.3.3",
     "apollo-upload-client": "^10.0.0",
     "axios": "^0.19.2",
@@ -119,7 +108,6 @@
     "prop-types": "^15.6.0",
     "ramda": "^0.26.1",
     "react": "^16.14.0",
-    "react-apollo": "^3.1.5",
     "react-debounce-input": "^3.1.0",
     "react-dom": "^16.14.0",
     "react-fela": "11.6.0",
@@ -174,7 +162,6 @@
     "@types/react-router-native": "^5.1.0",
     "@types/react-test-renderer": "^16.0.2",
     "@types/redux-logger": "^3.0.8",
-    "apollo-utilities": "^1.0.3",
     "axios-mock-adapter": "^1.17.0",
     "babel-preset-expo": "8.3.0",
     "caporal": "^0.10.0",
