--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -58,9 +58,11 @@
     "zen:watch": "zen watch -x"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.5",
     "@cdm-logger/server": "^7.0.7",
-    "@common-stack/core": "0.0.262",
-    "@common-stack/server-core": "0.0.262",
+    "@common-stack/core": "0.1.1",
+    "@common-stack/server-core": "0.1.1",
+    "@graphql-tools/links": "^8.0.4",
     "@sample-stack/core": "link:../../packages/sample-core",
     "@sample-stack/counter-module-server": "link:../../packages-modules/counter/server",
     "@sample-stack/platform-server": "link:../../packages/sample-platform/server",
@@ -68,12 +70,6 @@
     "apollo-datasource": "^0.7.0",
     "apollo-datasource-rest": "^0.8.0",
     "apollo-errors": "^1.9.0",
-    "apollo-link": "^1.2.13",
-    "apollo-link-batch-http": "^1.2.13",
-    "apollo-link-context": "^1.0.19",
-    "apollo-link-error": "^1.1.12",
-    "apollo-link-http": "^1.5.16",
-    "apollo-link-ws": "^1.0.19",
     "apollo-logger": "^0.3.3",
     "apollo-server-cache-memcached": "^0.6.7",
     "apollo-server-cache-redis": "^1.2.3",
@@ -93,7 +89,7 @@
     "graphql-bigint": "^1.0.0",
     "graphql-nats-subscriptions": "^1.4.2",
     "graphql-subscriptions": "^1.2.0",
-    "graphql-tools": "^4.0.8",
+    "graphql-tools": "^6.0.0",
     "graphql-type-json": "^0.3.1",
     "inversify": "^5.0.1",
     "isomorphic-fetch": "^2.2.1",
