--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -51,28 +51,20 @@
     }
   },
   "dependencies": {
+    "@apollo/client": "^3.4.5",
+    "@apollo/react-components": "^4.0.0",
+    "@apollo/react-hoc": "^4.0.0",
     "@cdm-logger/client": "^7.0.7",
     "@cdm-logger/server": "^7.0.7",
-    "@common-stack/client-core": "0.0.262",
-    "@common-stack/client-react": "0.0.262",
-    "@common-stack/core": "0.0.262",
-    "@common-stack/server-core": "0.0.262",
+    "@common-stack/client-core": "0.1.1",
+    "@common-stack/client-react": "0.1.1",
+    "@common-stack/core": "0.1.1",
+    "@common-stack/server-core": "0.1.1",
     "@sample-stack/core": "link:../../packages/sample-core",
     "@sample-stack/counter-module-browser": "link:../../packages-modules/counter/browser",
     "@sample-stack/platform-browser": "link:../../packages/sample-platform/browser",
-    "apollo-cache-inmemory": "^1.6.5",
-    "apollo-client": "^2.6.10",
-    "apollo-fetch": "^0.7.0",
-    "apollo-link": "^1.2.13",
-    "apollo-link-batch-http": "^1.2.13",
-    "apollo-link-context": "^1.0.19",
     "apollo-link-debounce": "^2.1.0",
-    "apollo-link-error": "^1.1.12",
-    "apollo-link-http": "^1.5.16",
     "apollo-link-logger": "^1.2.3",
-    "apollo-link-retry": "^2.2.15",
-    "apollo-link-schema": "^1.2.4",
-    "apollo-link-ws": "^1.0.19",
     "apollo-logger": "^0.3.3",
     "browser-bunyan": "^1.6.3",
     "classnames": "^2.2.6",
@@ -105,7 +97,6 @@
     "lodash": "^4.17.15",
     "ramda": "^0.26.1",
     "react": "^16.14.0",
-    "react-apollo": "^3.1.5",
     "react-dom": "^16.14.0",
     "react-fela": "11.6.0",
     "react-helmet": "^5.2.1",
