--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sample-stack",
-  "version": "0.8.9",
+  "version": "0.9.0",
   "private": true,
   "homepage": "https://github.com/cdmbase/fullstack-pro#readme",
   "bugs": {
@@ -111,7 +111,6 @@
     "dataloader": "^2.0.0",
     "graphql": "^14.7.0",
     "graphql-tag": "^2.11.0",
-    "graphql-tools": "^4.0.8",
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
   },
@@ -143,16 +142,16 @@
     "@babel/preset-typescript": "^7.7.7",
     "@babel/register": "^7.7.7",
     "@babel/runtime": "^7.7.7",
-    "@graphql-codegen/add": "1.13.5",
-    "@graphql-codegen/cli": "1.13.5",
-    "@graphql-codegen/fragment-matcher": "1.13.5",
-    "@graphql-codegen/import-types-preset": "1.13.5",
-    "@graphql-codegen/near-operation-file-preset": "1.13.5",
-    "@graphql-codegen/typescript": "1.13.5",
-    "@graphql-codegen/typescript-graphql-files-modules": "1.13.5",
-    "@graphql-codegen/typescript-operations": "1.13.5",
-    "@graphql-codegen/typescript-react-apollo": "1.13.5",
-    "@graphql-codegen/typescript-resolvers": "1.13.5",
+    "@graphql-codegen/add": "^2.0.2",
+    "@graphql-codegen/cli": "^1.21.8",
+    "@graphql-codegen/fragment-matcher": "^2.0.1",
+    "@graphql-codegen/import-types-preset": "^1.18.6",
+    "@graphql-codegen/near-operation-file-preset": "^1.18.6",
+    "@graphql-codegen/typescript": "^1.23.0",
+    "@graphql-codegen/typescript-graphql-files-modules": "^1.18.1",
+    "@graphql-codegen/typescript-operations": "^1.18.4",
+    "@graphql-codegen/typescript-react-apollo": "^2.3.1",
+    "@graphql-codegen/typescript-resolvers": "^1.20.0",
     "@hot-loader/react-dom": "^16.14.0",
     "@larix/zen": "0.1.37",
     "@open-wc/building-rollup": "^1.10.0",
