--- a/portable-devices/desktop/package.json
+++ b/portable-devices/desktop/package.json
@@ -43,28 +43,19 @@
     "@cdm-logger/client": "^7.0.7",
     "@cdm-logger/server": "^7.0.7",
     "@cdm-logger/electron": "^7.0.7",
-    "@common-stack/client-core": "0.0.262",
-    "@common-stack/client-react": "0.0.262",
-    "@common-stack/core": "0.0.262",
-    "@common-stack/server-core": "0.0.262",
+    "@common-stack/client-core": "0.1.1",
+    "@common-stack/client-react": "0.1.1",
+    "@common-stack/core": "0.1.1",
+    "@common-stack/server-core": "0.1.1",
     "@sample-stack/core": "link:../../packages/sample-core",
     "@sample-stack/counter-module-browser": "link:../../packages-modules/counter/browser",
     "@sample-stack/counter-module-electron": "link:../../packages-modules/counter/electron",
     "@sample-stack/platform-browser": "link:../../packages/sample-platform/browser",
     "antd": "^4.5.2",
     "apollo-cache-inmemory": "^1.6.5",
-    "apollo-client": "^2.6.10",
-    "apollo-fetch": "^0.7.0",
-    "apollo-link": "^1.2.13",
-    "apollo-link-batch-http": "^1.2.13",
-    "apollo-link-context": "^1.0.19",
+    "@apollo/client": "^3.4.5",
     "apollo-link-debounce": "^2.1.0",
-    "apollo-link-error": "^1.1.12",
-    "apollo-link-http": "^1.5.16",
     "apollo-link-logger": "^1.2.3",
-    "apollo-link-retry": "^2.2.15",
-    "apollo-link-schema": "^1.2.4",
-    "apollo-link-ws": "^1.0.19",
     "apollo-logger": "^0.3.3",
     "aws-sdk": "^2.880.0",
     "browser-bunyan": "^1.6.3",
@@ -105,7 +96,6 @@
     "pify": "^2.3.0",
     "ramda": "^0.26.1",
     "react": "^16.14.0",
-    "react-apollo": "^3.1.5",
     "react-dom": "^16.14.0",
     "react-fela": "11.6.0",
     "react-helmet": "^5.2.1",
