--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -100,6 +100,7 @@
     "mongoose": "^5.12.0",
     "morgan": "^1.9.1",
     "nats": "^1.3.2",
+    "react": "^16.14.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.3",
     "rxjs-compat": "^6.5.3",
