--- a/servers/moleculer-server/package.json
+++ b/servers/moleculer-server/package.json
@@ -13,6 +13,7 @@
     "build": "cross-env NODE_ENV=production yarn build:dist",
     "build:clean": "rimraf dist",
     "build:dist": "webpack",
+    "build:debug": "cross-env DEBUGGING=true NODE_ENV=production yarn build:dist",
     "build:watch": "yarn build:dist -- --watch",
     "cli": "moleculer connect --config ./dist/moleculer.config.js",
     "cli:dev": " cross-env ENV_FILE=../../config/development/dev.env yarn cli",
