--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -97,6 +97,7 @@
     "lodash": "^4.17.15",
     "moleculer": "^0.14.2",
     "moleculer-zipkin": "0.2.2",
+    "mongodb": "^4.1.0",
     "mongoose": "^5.13.5",
     "morgan": "^1.9.1",
     "nats": "^1.3.2",
