--- a/package.json
+++ b/package.json
@@ -213,7 +213,7 @@
     "csstype": "^2.5.5",
     "dotenv-safe": "^8.2.0",
     "dotenv-webpack": "^6.0.0",
-    "envalid": "^7.0.0",
+    "envalid": "^7.2.0-beta.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^7.23.0",
