troubleshoot apollo client

--- a/config/development/dev.env.sample
+++ b/config/development/dev.env.sample
@@ -14,3 +14,4 @@ REDIS_CLUSTER_URL='[{"port":6379,"host":"localhost"}]'
 REDIS_URL=redis://localhost:6379
 REDIS_CLUSTER_ENABLED=false
 REDIS_SENTINEL_ENABLED=false
+BACKEND_URL=http://localhost:8080
