--- a/portable-devices/mobile/package.json
+++ b/portable-devices/mobile/package.json
@@ -46,11 +46,10 @@
     "@react-navigation/stack": "^5.12.8",
     "@sample-stack/counter-module-mobile": "link:../../packages-modules/counter/mobile",
     "antd": "^4.5.2",
-    "@apollo/client": "^3.4.5",
+    "@apollo/client": "3.3.21",
     "apollo-link-debounce": "^2.1.0",
     "apollo-link-logger": "^1.2.3",
     "apollo-logger": "^0.3.3",
-    "apollo-upload-client": "^10.0.0",
     "axios": "^0.19.2",
     "browser-bunyan": "^1.5.3",
     "connected-react-router": "^6.6.1",
