--- a/portable-devices/desktop/package.json
+++ b/portable-devices/desktop/package.json
@@ -53,7 +53,7 @@
     "@sample-stack/platform-browser": "link:../../packages/sample-platform/browser",
     "antd": "^4.5.2",
     "apollo-cache-inmemory": "^1.6.5",
-    "@apollo/client": "3.3.21",
+    "@apollo/client": "~3.3.21",
     "apollo-link-debounce": "^2.1.0",
     "apollo-link-logger": "^1.2.3",
     "apollo-logger": "^0.3.3",
