--- a/package.json
+++ b/package.json
@@ -69,9 +69,10 @@
     "lintx": "yarn lint ./packages/**/src/**/*.ts ./packages-modules/**/src/**/*.ts",
     "prodBuild": "cross-env NODE_ENV=production babel-node --presets es2015 tools/webpack.run",
     "publish": "yarn lernapublish",
-    "publish:auto": "yarn lernapublish -- --yes",
-    "publish:force": "yarn lernapublish -- --force-publish=*",
-    "publish:forceManual": "yarn lernapublish -- --force-publish=*",
+    "publish:auto": "yarn lernapublish --yes",
+    "publish:force": "yarn publish:forceManual --yes",
+    "publish:forceManual": "yarn lernapublish --force-publish=*",
+    "publish:push": "yarn prelernapublish && git push origin publish && yarn postlernapublish",
     "start": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env yarn zen:watch",
     "start:envSSR": "cross-env SSR=true NODE_ENV=development ENV_FILE=../../config/development/dev.env yarn zen:watch",
     "start:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env zen watch",
