--- a/package.json
+++ b/package.json
@@ -203,6 +203,7 @@
     "babel-eslint": "^10.0.3",
     "babel-jest": "^26.3.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-import": "^1.13.3",
     "caporal": "^1.3.0",
     "chokidar": "^3.4.0",
     "clean-webpack-plugin": "^2.0.0",
