--- a/package.json
+++ b/package.json
@@ -106,8 +106,8 @@
     ]
   },
   "resolutions": {
-    "chokidar": "^3.4.0",
-    "@apollo/client": "~3.3.21"
+    "@apollo/client": "~3.3.21",
+    "chokidar": "^3.4.0"
   },
   "dependencies": {
     "dataloader": "^2.0.0",
@@ -291,6 +291,7 @@
     "resolve-url-loader": "^3.1.1",
     "rimraf": "^3.0.0",
     "rollup": "^2.53.2",
+    "rollup-plugin-string": "^3.0.0",
     "sass-loader": "^8.0.0",
     "shelljs": "^0.8.3",
     "simple-git": "^2.42.0",
